deployment/aks/webapps/web-blazor/web-blazor-deplopyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-blazor-deployment
  labels:
    app: web-blazor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-blazor
  template:
    metadata:
      labels:
        app: web-blazor
    spec:
      containers:
        - name: web-blazor
          image:  netcoremicroservicesacr.azurecr.io/webblazor:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

      imagePullSecrets:
        - name: acr-secret
