deployment/aks/webapps/web-blazor/web-blazor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-blazor-service
spec:
  type: LoadBalancer
  selector:
    app: web-blazor
  ports:
    - protocol: TCP
      port: 80
