deployment/aks/webapps/web-blazor/web-blazor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-blazor-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    
spec:
  tls:
    - hosts: 
        - shopwinner.org
      secretName: shopwinner-web-cert
  rules:
  - host: "shopwinner.org"
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: web-blazor-service
            port:
              number: 80
